# krkrz

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  cmake-variants.yaml  sources.cmake  vcpkg.json
common/base/: BinaryStream.cpp  BinaryStream.h  BinaryStreamBuffer.h  CharacterSet.cpp  CharacterSet.h  EventIntf.cpp  EventIntf.h  ScriptMgnIntf.cpp  StorageCache.cpp  StorageCache.h  StorageIntf.cpp  StorageIntf.h  SysInitIntf.cpp  SysInitIntf.h  SystemIntf.cpp  SystemIntf.h  TextStream.cpp  UserEvent.h  UtilStreams.cpp  UtilStreams.h  XP3Archive.cpp  XP3Archive.h
common/base/stub/: DrawDeviceImpl.cpp
common/glad/include/glad/: gles2.h
common/msg/: MsgIntf.cpp  MsgIntf.h
common/msg/text/: gentext.pl  gentext_generic.bat
common/sound/: OpusCodecDecoder.cpp  PhaseVocoderDSP.cpp  PhaseVocoderDSP.h  QueueSoundBufferImpl.cpp  QueueSoundBufferImpl.h  SoundBufferBaseImpl.cpp  SoundDecodeThread.cpp  SoundPlayer.cpp  SoundPlayer.h  SoundSamples.h  VorbisCodecDecoder.cpp  WaveIntf.cpp  WaveLoopManager.cpp
common/tjs2/: tjs.cpp  tjs.h  tjs.tab.cpp  tjsArray.cpp  tjsBinarySerializer.h  tjsCommHead.h  tjsConfig.cpp  tjsConfig.h  tjsDate.cpp  tjsDebug.cpp  tjsDebug.h  tjsDictionary.cpp  tjsError.h  tjsInterCodeExec.cpp  tjsInterCodeGen.cpp  tjsInterCodeGen.h  tjsMath.cpp  tjsNamespace.h  tjsNative.cpp  tjsNative.h  tjsObject.cpp  tjsScriptBlock.cpp  tjsScriptBlock.h  tjsSnprintf.cpp  tjsString.h  tjsTypes.h  tjsVariant.cpp  tjsVariant.h  tjsVariantString.cpp  tjsVariantString.h  tjsdate.tab.cpp  tjspp.tab.cpp
common/utils/: DebugIntf.cpp  DebugIntf.h  LogIntf.h  NativeFile.h  ObjectList.h  StringUtil.h  ThreadIntf.cpp  ThreadIntf.h  VelocityTracker.h
common/visual/: BitmapDrawDevice.cpp  BitmapDrawDevice.h  BitmapInfomation.h  BitmapLayerTreeOwner.cpp  BitmapLayerTreeOwner.h  ComplexRect.cpp  DrawDevice.cpp  DrawDevice.h  FreeType.cpp  FreeTypeFace.h  FreeTypeFontRasterizer.cpp  GraphicsLoadThread.cpp  GraphicsLoaderIntf.cpp  GraphicsLoaderIntf.h  LayerBitmapImpl.cpp  LayerIntf.cpp  LayerIntf.h  LayerTreeOwner.h  LayerTreeOwnerImpl.cpp  LayerTreeOwnerImpl.h  LoadJPEG.cpp  LoadPNG.cpp  LoadTLG.cpp  MoviePlayer.h  NullDrawDevice.h  SaveTLG6.cpp  VideoOvlIntf.cpp  WindowIntf.cpp  WindowIntf.h  tvpinputdefs.h
common/visual/IA32/: tvpgl_ia32_intf.c
common/visual/gl/: ResampleImage.cpp  adjust_color_sse2.cpp  neonutil.h
common/visual/opengl/: CanvasIntf.cpp  EglContext.cpp  GLFrameBufferObject.cpp  GLFrameBufferObject.h  GLShaderUtil.cpp  GLTexture.cpp  GLTexture.h  OGLDrawDevice.cpp  OGLDrawDevice.h  OffscreenIntf.cpp  OffscreenIntf.h  OpenGLError.cpp  OpenGLHeader.h  TextureInfo.h  TextureIntf.cpp  TextureIntf.h  TextureLayerTreeOwner.cpp  TextureLayerTreeOwner.h
generic/: krkrz.h  tp_stub.h
generic/app/: movie.cpp  winres.cpp
generic/base/: DrawDeviceImpl.cpp  FileImpl.cpp  LocalFileSystem.h  PluginImpl.cpp  ScriptMgnImpl.cpp  StorageImpl.cpp  SysInitImpl.cpp  SystemImpl.cpp
generic/environ/: Application.cpp  Application.h  FontSystemBase.cpp  JoyPad.cpp  OGLApplication.cpp  OGLApplication.h  WindowForm.cpp  WindowForm.h  WindowFormEvent.h
generic/msg/: MsgImpl.cpp  MsgLoad.cpp
generic/utils/: ThreadImpl.cpp  TickCountImpl.cpp
generic/visual/: VideoOvlImpl.cpp  VideoOvlImpl.h  WindowImpl.cpp  WindowImpl.h
win32/: tp_stub.cpp  tp_stub.h
win32/base/: EventImpl.cpp  FileSelector.cpp  PluginImpl.cpp  PluginImpl.h  ScriptMgnImpl.cpp  StorageImpl.cpp  StorageImpl.h  SusieArchive.cpp  SysInitImpl.cpp  SysInitImpl.h  SystemImpl.cpp  makestub.pl
win32/environ/: Application.cpp  Application.h  ConfigFormUnit.cpp  DetectCPU.cpp  EmergencyExit.cpp  TVPWindow.cpp  VersionFormUnit.cpp  WindowFormUnit.cpp  WindowFormUnit.h
win32/movie/: BufferRenderer.cpp  BufferRenderer.h  CDemuxSource.cpp  CMakeLists.txt  DShowException.cpp  MFPlayer.cpp  dslayerd.cpp  dsmixer.cpp  dsmovie.cpp  dsoverlay.cpp  krlmovie.cpp  webplayer.cpp  webplayer.h
win32/msg/: MsgImpl.cpp  MsgImpl.h  MsgLoad.cpp  ReadOptionDesc.cpp
win32/sound/: WaveImpl.cpp
win32/utils/: FilePathUtil.h  ThreadImpl.cpp  TickCountImpl.cpp
win32/vcproj/: SysInitScript.tjs  dpi.manifest  option_desc_ja.json
win32/visual/: BasicDrawDevice.cpp  BitmapInfomationImpl.h  DInputMgn.cpp  DInputMgn.h  DrawDeviceImpl.cpp  GDIFontRasterizer.cpp  GraphicsLoaderImpl.cpp  NativeFreeTypeFace.cpp  OpenGLPlatform.cpp  VSyncTimingThread.cpp  VideoOvlImpl.cpp  WindowImpl.cpp  WindowImpl.h  krmovie.h
